Added Reset Password API , validation , logger , testcase , swagger in Reset Password
