# app/routes/note.routes.js
@@ -1,5 +1,7 @@
 
 const controller = require('../controllers/note.controller.js');
+// const helper= require('../utilities/helper');
+
 module.exports = (app) => {
   // api for registration
   app.post('/register', controller.register);
@@ -7,4 +9,8 @@ module.exports = (app) => {
   app.post('/login', controller.login);
   // api for forget pasword
   app.post('/forgotPassword', controller.forgotPassword);
+  //api for reset-password
+  app.put('/resetPassword', controller.resetPassword);
+
+  // app.post('/createnotes', helper.validateToken, noteController.createNote);
 }
