# app/utilities/validation.js
@@ -6,12 +6,11 @@ class Validation {
           firstName: Joi.string()
             .min(3)
             .required()
-            .pattern(new RegExp("^([A-Z][a-z]{1,30}[ ]?[.]?[']?[ ]?[a-zA-Z]{1,30}[ ]?[.]?[']?[ ]?[a-zA-Z]{0,30}[ ]?[a-zA-Z]{0,30}?)")),
+            .pattern(new RegExp("^([A-Z]?[a-zA-Z]{1,30}[ ]?[.]?[']?[ ]?[a-zA-Z]{1,30}[ ]?[.]?[']?[ ]?[a-zA-Z]{0,30}[ ]?[a-zA-Z]{0,30}?)")),
 
           lastName: Joi.string()
             .min(2)
-            .required()
-            .pattern(new RegExp("^([A-Z][a-z]{1,30}[ ]?[.]?[']?[ ]?[a-zA-Z]{1,30}[ ]?[.]?[']?[ ]?[a-zA-Z]{0,30}[ ]?[a-zA-Z]{0,30}?)")),
+            .required(),
 
           email: Joi.string()
             .pattern(new RegExp('^[a-zA-z]{3}([+-_ .]*[a-zA-Z0-9]+)*[@][a-zA-z0-9]+(.[a-z]{2,3})*$'))
@@ -30,13 +29,25 @@ class Validation {
             .required(),
 
           password: Joi.string()
-            .required()
             .pattern(new RegExp('(?=^.{8,}$)((?=.*\\d)|(?=.*\\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$'))
+            .required()
         });
 
         authenticateLogin = Joi.object({
           email: Joi.string()
             .pattern(new RegExp('^[a-zA-z]{3}([+-_ .]*[a-zA-Z0-9]+)*[@][a-zA-z0-9]+(.[a-z]{2,3})*$'))
+            .required()
+        })
+
+        validateReset = Joi.object({
+          email: Joi.string()
+            .pattern(new RegExp('^[a-zA-Z0-9]+([+_.-][a-zA-Z0-9]+)*[@][a-zA-Z0-9]+[.][a-zA-Z]{2,4}([.][a-zA-Z]{2,4})?$'))
+            .required(),
+          newPassword: Joi.string()
+            .pattern(new RegExp('(?=^.{8,}$)((?=.*\\d)|(?=.*\\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$'))
+            .required(),
+          code: Joi.string()
+            .pattern(new RegExp('[0-9aA-Za-z]{1,}'))
             .required()
         })
     }
